# dask-lxplus

./: LICENSE.txt  MANIFEST.in  README.md  setup.cfg
dask_lxplus/: __init__.py  cluster.py  config.py  jobqueue-cern.yaml
tests/: test_cluster.py
