[metadata]
name = dask_lxplus
version = 0.2.2
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE.txt
author = Ben Jones
author_email = b.jones@cern.ch
url = https://github.com/cernops/dask-lxplus
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: System :: Distributed Computing

[options]
packages =
    dask_lxplus
install_requires =
    click>=7.0
    click-didyoumean
    cryptography
    dask
    dask-jobqueue
    htcondor>=8.9.8
    humanize
    psutil
    pyyaml
    watchdog
    importlib-metadata>=1.0;python_version < "3.9"
python_requires = >=3.6
include_package_data = True

[options.package_data]
* =
    *.sh
    *.yaml
